k8s/00-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: marketplace
  labels:
    name: marketplace
