k8s/06-marketplace-deployment.yaml
# az postgres flexible-server create -g aks_test_clu_group -n wb-db --public-access all -l eastus --sku Standard_B1ms --tier Burstable

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: marketplace
  name: marketplace-deployment
  labels:
    app: marketplace-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marketplace
  template:
    metadata:
      labels:
        app: marketplace
    spec:
      containers:
        - name: marketplace
          image: marketplace-api:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 80
