k8s/08-ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: marketplace
  name: marketplace-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: marketplace.api.motivus.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marketplace
                port:
                  number: 80
